Partial implementation for GET statistics
