# service-gamification/src/docs/swagger.json
@@ -39,6 +39,25 @@
                     }
                 }
             }
+        },
+        "/statistics": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "GET Statistics",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.UserStatistics"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -47,6 +66,47 @@
             "properties": {
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserStatistics": {
+            "type": "object",
+            "properties": {
+                "level": {
+                    "type": "integer"
+                },
+                "level_title": {
+                    "type": "string"
+                },
+                "time_watched_ms_per_category": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
+                    }
+                },
+                "time_watched_ms_per_channel": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
+                    }
+                },
+                "time_watched_ms_per_series": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
+                    }
+                },
+                "time_watched_ms_total": {
+                    "type": "integer"
+                },
+                "xp": {
+                    "type": "integer"
+                },
+                "xp_next_level": {
+                    "type": "integer"
+                },
+                "xp_previous_level": {
+                    "type": "integer"
                 }
             }
         }
